--- a/templates/home.html
+++ b/templates/home.html
@@ -49,7 +49,7 @@ FIRST WEBSITE</span></p>
 
 <p class=MsoNormal align=center style='text-align:center'><span
 style='font-size:26.0pt;line-height:107%;font-family:"Calibri Light",sans-serif'>Hello
-everyone, my name is Th‡nh</span></p>
+everyone, my name is Th√†nh</span></p>
 
 <p class=MsoNormal align=center style='text-align:center'><span
 style='font-size:26.0pt;line-height:107%;font-family:"Calibri Light",sans-serif'>This
